--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="table-list list-group"> 
         <h4 class="headings">Tables</h4>
         <ul>
-          <li class="custom-item-class custom-item"><input class="custom-item-class-inside" placeholder="Table Number" type="text" id="table-search" onkeyup="findTable()"/></li>
+          <li class="custom-item-class custom-item"><input class="custom-item-class-inside" placeholder="Search Table Number" type="text" id="table-search" onkeyup="findTable()"/></li>
         </ul>
       </div>
       <div class="item-list list-group">
