--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <title>ZeMoSo Restaurant</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -17,7 +20,7 @@
       <div class="table-list list-group"> 
         <h4 class="headings">Tables</h4>
         <ul>
-          <li class="custom-item-class custom-item"><input class="custom-item-class-inside" placeholder="Search Table Number" type="text" id="table-search" onkeyup="findTable()"/></li>
+          <li class="custom-item-class custom-item"><input class="custom-item-class-inside" placeholder="Table Number" type="text" id="table-search" onkeyup="findTable()"/></li>
         </ul>
       </div>
       <div class="item-list list-group">
